[package]
name = "naru-pub-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
aws-config = "1.1"
aws-sdk-s3 = "1.17"
anyhow = "1.0"
bytes = "1.5"
percent-encoding = "2.3"
